Implement bounded CPU fusion profitability